<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- conectare strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="conectare_ek4_string">CONECTARE</string>
	<string name="session_name_ek1_string">Session Name</string>
	<string name="endpoint_authentification_ek1_string">Endpoint Authentification</string>
	<string name="endpoint_url__ek1_string">Endpoint Url:</string>
	<string name="security_mode__ek1_string">Security Mode:</string>
	<string name="security_policy_string">Security Policy</string>
	<string name="message_encoding_ek1_string">Message Encoding</string>

	<string-array name="course">
		<item>Edit Name</item>
		<item>Edit Node</item>
		<item>Delete</item>
	</string-array>
</resources>